src/dots/dots_kernel.ss/src/Safir/Dob/Typesystem/Internal/Kernel.h

    typedef void (*DotsC_BytePointerDeleter)(char * &);
    typedef enum {DotsC_KeyMode=0, DotsC_ValueMode=1} DotsC_KeyValMode;
    DOTS_KERNEL_API void DotsC_GetClassMemberReference(const DotsC_TypeId classTypeId,
                                                       const DotsC_TypeId propertyTypeId,
                                                       const DotsC_MemberIndex propertyMember,
                                                       const DotsC_Int32 * & classMemberReference, 
                                                       DotsC_Int32 & classMemberReferenceSize); 
    DOTS_KERNEL_API void DotsC_GetPropertyParameterReference(const DotsC_TypeId typeId,
                                                             const DotsC_TypeId propertyId,
                                                             const DotsC_MemberIndex member,
                                                             const DotsC_Int32 index,
                                                             DotsC_ParameterIndex& paramId, 
                                                             DotsC_Int32& paramValueIndex); 
    DOTS_KERNEL_API void DotsC_BlobToXml(char * const xmlDest,
                                         const char * const blobSource,
                                         const DotsC_Int32 bufSize,
                                         DotsC_Int32 & resultSize);
    DOTS_KERNEL_API void DotsC_XmlToBlob(char * & blobDest,
                                         DotsC_BytePointerDeleter & deleter,
                                         const char * const xmlSource);
    DOTS_KERNEL_API void DotsC_BlobToJson(char * const jsonDest,
                                          const char * const blobSource,
                                          const DotsC_Int32 bufSize,
                                          DotsC_Int32 & resultSize);
    DOTS_KERNEL_API void DotsC_JsonToBlob(char * & blobDest,
                                          DotsC_BytePointerDeleter & deleter,
                                          const char * const jsonSource);
    DOTS_KERNEL_API DotsC_Int32 DotsC_CalculateBase64BufferSize(const DotsC_Int32 binarySourceSize);
    DOTS_KERNEL_API void DotsC_BinaryToBase64(char * const base64Dest,
                                              const DotsC_Int32 destSize,
                                              const char * const binarySource,
                                              const DotsC_Int32 sourceSize,
                                              DotsC_Int32 & resultSize);
    DOTS_KERNEL_API DotsC_Int32 DotsC_CalculateBinaryBufferSize(const DotsC_Int32 base64SourceSize);
    DOTS_KERNEL_API void DotsC_Base64ToBinary(char * const binaryDest,
                                              const DotsC_Int32 destSize,
                                              const char * const base64Source,
                                              const DotsC_Int32 sourceSize,
                                              DotsC_Int32 & resultSize);
    DOTS_KERNEL_API void DotsC_GetBooleanParameter(const DotsC_TypeId typeId,
                                                   const DotsC_ParameterIndex parameter,
                                                   const DotsC_Int32 index,
                                                   bool & val);
    DOTS_KERNEL_API void DotsC_GetEnumerationParameter(const DotsC_TypeId typeId,
                                                       const DotsC_ParameterIndex parameter,
                                                       const DotsC_Int32 index,
                                                       const DotsC_KeyValMode keyValMode,
                                                       DotsC_EnumerationValue & val);
    DOTS_KERNEL_API void DotsC_GetInt32Parameter(const DotsC_TypeId typeId,
                                                 const DotsC_ParameterIndex parameter,
                                                 const DotsC_Int32 index,
                                                 const DotsC_KeyValMode keyValMode,
                                                 DotsC_Int32 & val);
    DOTS_KERNEL_API void DotsC_GetInt64Parameter(const DotsC_TypeId typeId,
                                                 const DotsC_ParameterIndex parameter,
                                                 const DotsC_Int32 index,
                                                 const DotsC_KeyValMode keyValMode,
                                                 DotsC_Int64 & val);
    DOTS_KERNEL_API void DotsC_GetFloat32Parameter(const DotsC_TypeId typeId,
                                                   const DotsC_ParameterIndex parameter,
                                                   const DotsC_Int32 index,
                                                   DotsC_Float32 & val);
    DOTS_KERNEL_API void DotsC_GetFloat64Parameter(const DotsC_TypeId typeId,
                                                   const DotsC_ParameterIndex parameter,
                                                   const DotsC_Int32 index,
                                                   DotsC_Float64 & val);
    DOTS_KERNEL_API void DotsC_GetStringParameter(const DotsC_TypeId typeId,
                                                  const DotsC_ParameterIndex parameter,
                                                  const DotsC_Int32 index,
                                                  const DotsC_KeyValMode keyValMode,
                                                  const char * & val);
    DOTS_KERNEL_API void DotsC_GetTypeIdParameter(const DotsC_TypeId typeId,
                                                  const DotsC_ParameterIndex parameter,
                                                  const DotsC_Int32 index,
                                                  const DotsC_KeyValMode keyValMode,
                                                  DotsC_TypeId & val);
    DOTS_KERNEL_API void DotsC_GetHashedIdParameter(const DotsC_TypeId typeId,
                                                    const DotsC_ParameterIndex parameter,
                                                    const DotsC_Int32 index,
                                                    const DotsC_KeyValMode keyValMode,
                                                    DotsC_Int64 & hashVal,
                                                    const char * & strVal);
    DOTS_KERNEL_API void DotsC_GetEntityIdParameter(const DotsC_TypeId typeId,
                                                    const DotsC_ParameterIndex parameter,
                                                    const DotsC_Int32 index,
                                                    const DotsC_KeyValMode keyValMode,
                                                    DotsC_EntityId & entityId,
                                                    const char * & instanceIdStr);
    DOTS_KERNEL_API void DotsC_GetObjectParameter(const DotsC_TypeId typeId,
                                                  const DotsC_ParameterIndex parameter,
                                                  const DotsC_Int32 index,
                                                  const char * & val);
    DOTS_KERNEL_API void DotsC_GetBinaryParameter(const DotsC_TypeId typeId,
                                                  const DotsC_ParameterIndex parameter,
                                                  const DotsC_Int32 index,
                                                  const char * & val,
                                                  DotsC_Int32 & size);
    DOTS_KERNEL_API DotsC_Int32 DotsC_DictionaryInt32KeyToIndex(const DotsC_TypeId typeId, const DotsC_ParameterIndex parameter, const DotsC_Int32 key);