src/dots/dots_dotnet.ss/src/Kernel.cs


		//GetClassMemberReference
		[DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
		internal static extern void DotsC_GetClassMemberReference(System.Int64 typeId,
		                                                          System.Int64 propertyId,
		                                                          System.Int32 propertyMember,
		                                                          out System.IntPtr classMemberReference,
		                                                          out System.Int32 classMemberReferenceSize); //out

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_GetPropertyParameterReference(System.Int64 typeId,
		                                                                System.Int64 propertyId,
		                                                                System.Int32 propertyMember,
		                                                         		System.Int32 index,
		                                                         		out System.Int32 paramId, //out
		                                                                out System.Int32 paramValueIndex); //out

        //************************************************************************************
        //* Serialization
        //************************************************************************************
        //BetterBlobToXml
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_BlobToXml(System.IntPtr xmlDest,
                                                          System.IntPtr blobSource,
                                                          System.Int32 bufSize,
                                                          out System.Int32 resultSize);

        //BlobToJson
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern void DotsC_BlobToJson(System.IntPtr jsonDest,
                                                     System.IntPtr blobSource,
                                                     System.Int32 bufSize,
                                                     out System.Int32 resultSize);

#if FUNC_PTR_WORKAROUND
        //XmlToBlob
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern void DotsC_XmlToBlob(out System.IntPtr blobDest,
                                                    out System.IntPtr dummy,
                                                    System.IntPtr val);

        //JsonToBlob
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern void DotsC_JsonToBlob(out System.IntPtr blobDest,
                                                     out System.IntPtr dummy,
                                                     System.IntPtr val);


#else
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        internal delegate void DotsC_BytePointerDeleter(ref System.IntPtr ptr);

        //XmlToBlob
        [DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void DotsC_XmlToBlob(out System.IntPtr blobDest,
                                                    out DotsC_BytePointerDeleter deleter,
                                                    System.IntPtr val);

        //JsonToBlob
        [DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void DotsC_JsonToBlob(out System.IntPtr blobDest,
                                                    out DotsC_BytePointerDeleter deleter,
                                                    System.IntPtr val);
#endif



        //CalculateBase64BufferSize
        [DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
        internal static extern System.Int32 DotsC_CalculateBase64BufferSize(System.Int32 binarySourceSize);

        //BinaryToBase64
        [DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void DotsC_BinaryToBase64(System.IntPtr base64Dest,
                                                         System.Int32 destSize,
                                                         System.IntPtr binarySource,
                                                         System.Int32 sourceSize,
                                                         out System.Int32 resultSize);

        //CalculateBinaryBufferSize
        [DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
        internal static extern System.Int32 DotsC_CalculateBinaryBufferSize(System.Int32 base64SourceSize);

        //Base64ToBinary
        [DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void DotsC_Base64ToBinary(System.IntPtr binaryDest,
                                                         System.Int32 destSize,
                                                         System.IntPtr base64Source,
                                                         System.Int32 sourceSize,
                                                         out System.Int32 resultSize);

        //************************************************************************************
        //* Functions for retrieval of parameters
        //************************************************************************************
        //GetBooleanParameter
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern void DotsC_GetBooleanParameter(System.Int64 id,
                                                              System.Int32 parameter,
                                                              System.Int32 index,
                                                              out byte val);

        //GetEnumerationParameter
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern void DotsC_GetEnumerationParameter(System.Int64 id,
                                                                  System.Int32 parameter,
                                                                  System.Int32 index,
		                                                          KeyValMode keyValMode,
                                                                  out System.Int32 val);

        //GetInt32Parameter
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern void DotsC_GetInt32Parameter(System.Int64 id,
                                                            System.Int32 parameter,
                                                            System.Int32 index,
		                                                    KeyValMode keyValMode,
                                                            out System.Int32 val);

        //GetInt64Parameter
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern void DotsC_GetInt64Parameter(System.Int64 id,
                                                            System.Int32 parameter,
                                                            System.Int32 index,
		                                                    KeyValMode keyValMode,
                                                            out System.Int64 val);

        //GetFloat32Parameter
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern void DotsC_GetFloat32Parameter(System.Int64 id,
                                                              System.Int32 parameter,
                                                              System.Int32 index,
                                                              out float val);

        //GetFloat64Parameter
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern void DotsC_GetFloat64Parameter(System.Int64 id,
                                                              System.Int32 parameter,
                                                              System.Int32 index,
                                                              out double val);

        //GetStringParameter
        [DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void DotsC_GetStringParameter(System.Int64 id,
                                                             System.Int32 parameter,
                                                             System.Int32 index,
		                                                     KeyValMode keyValMode,
                                                             out System.IntPtr val);

		//GetTypeIdParameter
		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_GetTypeIdParameter(System.Int64 id,
		                                                     System.Int32 parameter,
		                                                     System.Int32 index,
		                                                     KeyValMode keyValMode,
		                                                     out System.Int64 val);

        //GetHashedIdParameter
        [DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void DotsC_GetHashedIdParameter(System.Int64 id,
                                                               System.Int32 parameter,
                                                               System.Int32 index,
		                                                       KeyValMode keyValMode,
                                                               out System.Int64 hashVal,
                                                               out System.IntPtr strVal);

        //GetEntityIdParameter
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern void DotsC_GetEntityIdParameter(System.Int64 id,
                                                               System.Int32 parameter,
                                                               System.Int32 index,
		                                                       KeyValMode keyValMode,
                                                               out Internal.DotsC_EntityId eid,
                                                               out System.IntPtr strVal);

        //GetObjectParameter
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern void DotsC_GetObjectParameter(System.Int64 id,
                                                             System.Int32 parameter,
                                                             System.Int32 index,
                                                             out System.IntPtr val);

        //GetBinaryParameter
        [DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern void DotsC_GetBinaryParameter(System.Int64 id,
                                                             System.Int32 parameter,
                                                             System.Int32 index,
                                                             out System.IntPtr val,
                                                             out System.Int32 size);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern System.Int32 DotsC_DictionaryInt32KeyToIndex(System.Int64 typeId,
		                                                                    System.Int32 parameter,
		                                                                    System.Int32 key);
